<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_qrcode"
        android:orderInCategory="100"
        android:title="@string/action_qrcode"
        android:icon="@drawable/ic_qrcode_scan"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/action_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        android:title="@string/action_Location"
        android:icon="@drawable/ic_my_location_black_24dp"
        app:showAsAction="always" />

</menu>
