<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashText"
    tools:context=".login_signup">


    <RelativeLayout
        android:id="@+id/login_details_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:id="@+id/action_bar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp">
        <ImageButton
            android:id="@+id/close_btn"
            android:layout_height="24dp"
            android:layout_width="24dp"
            android:layout_gravity="left"
            android:src="@drawable/ic_close_black_24dp"
            android:backgroundTint="@android:color/transparent"/>

            <TextView
                android:id="@+id/login_text_prompt"
                style="@style/login_signup_prompt_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/close_btn"
                android:layout_marginTop="4dp"
                android:text="@string/prompt_login_header"/>
        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            style="@style/login_signup_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/action_bar"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLoginTextInputOutlinedBox"
                android:hint="@string/prompt_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            style="@style/login_signup_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pswd_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:textColor="@color/colorLoginTextInputOutlinedBox"
                android:hint="@string/prompt_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/login_btn"
            style="@style/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="16dp"
            android:text="@string/login_btn_text"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/forgot_pwd_btn"
            style="@style/forgot_pwd_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_marginTop="12dp"
            android:layout_alignParentLeft="true"
           android:text="@string/forgot_pwd_btn_text" />

        <android.support.design.button.MaterialButton
            android:id="@+id/sign_up_btn"
            style="@style/signup_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/forgot_pwd_btn"
            android:layout_marginTop="16dp"
            android:text="@string/signup_btn_text"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/forgot_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="24dp"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/forgot_action_bar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <ImageButton
                android:id="@+id/forgot_close_btn"
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_close_black_24dp"
                android:backgroundTint="@android:color/transparent"/>

            <TextView
                android:id="@+id/forgot_text_prompt"
                style="@style/login_signup_prompt_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/close_btn"
                android:layout_marginTop="4dp"
                android:text="@string/prompt_forgot_header"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgotemail"
            style="@style/login_signup_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/forgot_action_bar"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/forgot_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLoginTextInputOutlinedBox"
                android:hint="@string/prompt_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/send_pwd_reset_button"
            style="@style/login_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/forgotemail"
            android:layout_marginTop="16dp"
            android:text="@string/pwd_reset_btn_text"/>

    </RelativeLayout>

</RelativeLayout>