<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme.NavHeader">


    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/ic_account_circle_black_24dp"/>

         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_vertical_margin"
             android:layout_toRightOf="@+id/profile_pic">
             <TextView
                 android:id="@+id/display_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
                 android:text="@string/nav_header_title"
                 android:textColor="@color/colorWhite87"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
            android:id="@+id/display_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_name"
                android:textColor="@color/colorWhite87"
            android:text="@string/nav_header_subtitle" />
         </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
