<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingTop="0dp">

    <RelativeLayout
        android:id="@+id/progress_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:visibility="invisible">

        <RelativeLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerHorizontal="true"
                   android:padding="16dp">
                <ProgressBar
            android:id="@+id/indeterminate_bar"
            style="@android:style/Widget.Material.Light.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/indeterminate_bar"
                    android:layout_centerVertical="true"
                    android:text="@string/progress_login_text"
                    android:textColor="@color/colorBlack87"
                    android:textSize="16dp" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_and_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fullscreen_content_controls">

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Welcome to Awaile"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBlack87"
            android:textSize="24dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeText"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/google_sign_in_button"
            style="@style/google_signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/google_sign_in" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/facebook_sign_in_material_button"
            style="@style/facebook_signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/facebook_sign_in" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/email_signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorMail"
            android:text="@string/action_sign_in" />


    </LinearLayout>

</RelativeLayout>