<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSplashText"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/reg_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <LinearLayout
            android:id="@+id/action_bar_reg"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <ImageButton
                android:id="@+id/close_btn_reg"
                android:layout_height="24dp"
                android:layout_width="24dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_close_black_24dp"
                android:backgroundTint="@android:color/transparent"/>

            <TextView
                android:id="@+id/sign_up_text_prompt"
                style="@style/login_signup_prompt_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/close_btn"
                android:layout_marginTop="4dp"
                android:text="@string/prompt_signup_header"/>
        </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/detailsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_header"
            android:layout_marginTop="72dp"
            android:layout_centerInParent="true">

            <!--Name Field-->
            <RelativeLayout
            android:id="@+id/nameField"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id= "@+id/name_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:backgroundTint="@android:color/transparent"/>


            <android.support.design.widget.TextInputLayout
            android:id="@+id/name_reg"
            style="@style/login_signup_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@id/name_icon">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/name_reg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLoginTextInputOutlinedBox"
                android:hint="@string/prompt_name" />

        </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
            <!--Email Field-->
            <RelativeLayout
            android:id="@+id/emailField"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/nameField">
            <ImageButton
                android:id= "@+id/email_reg_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_mail_black_24dp"
                android:backgroundTint="@android:color/transparent"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_reg"
            style="@style/login_signup_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@+id/email_reg_icon">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_reg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLoginTextInputOutlinedBox"
                android:hint="@string/prompt_email" />

        </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
            <!--Password Field-->
            <RelativeLayout
            android:id="@+id/passwordField"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/emailField">
            <ImageButton
                android:id= "@+id/pwd_reg_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_lock_question"
                android:backgroundTint="@android:color/transparent"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_reg"
            style="@style/login_signup_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@id/pwd_reg_icon">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_reg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:textColor="@color/colorLoginTextInputOutlinedBox"
                android:hint="@string/prompt_password"/>

        </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
            <!--Phone Field-->
            <RelativeLayout
                android:id="@+id/phoneField"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/passwordField">
                <ImageButton
                    android:id= "@+id/phone_reg_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:backgroundTint="@android:color/transparent"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_reg"
                    style="@style/login_signup_text_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:layout_toRightOf="@id/phone_reg_icon">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/phone_reg_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLoginTextInputOutlinedBox"
                        android:hint="@string/prompt_mobile"/>

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/reg_btn"
                style="@style/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneField"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/reg_btn_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/verifyOTPlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible">

            <!--OTP Field-->
            <RelativeLayout
                android:id="@+id/otpField"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id= "@+id/otp_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_textbox_password"
                    android:backgroundTint="@android:color/transparent"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/otp_reg"
                    style="@style/login_signup_text_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:layout_toRightOf="@id/otp_icon">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/otp_reg_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLoginTextInputOutlinedBox"
                        android:hint="@string/prompt_otp" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <!--VerifyButton-->
            <android.support.design.button.MaterialButton
                android:id="@+id/otp_btn"
                style="@style/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otpField"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/reg_btn_otp"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
